# django

Goodeat/: .gitignore  pyproject.toml
Goodeat/config/: settings.py  urls.py
Goodeat/restaurants/: models.py  serializers.py  tests.py  urls.py  views.py
Goodeat/restaurants/migrations/: 0001_initial.py
Goodeat/reviews/: models.py  tests.py  urls.py  views.py
Goodeat/reviews/migrations/: 0001_initial.py  0002_review_rating.py
Goodeat/users/: models.py  serializers.py  tests.py  urls.py  views.py
Goodeat/users/migrations/: 0001_initial.py
To_Do_List/: .gitignore  db.sqlite3  pyproject.toml
To_Do_List/app/to_do_list/: admin.py  apps.py  urls.py  views.py
To_Do_List/apps/todo/: admin.py  apps.py  cbv_urls.py  cbvs.py  forms.py  models.py  urls.py  views.py
To_Do_List/apps/todo_list/: admin.py  apps.py  models.py  urls.py  views.py
To_Do_List/apps/todos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
To_Do_List/apps/user/: cbv_urls.py  cbvs.py  forms.py  models.py  urls.py
To_Do_List/apps/users/: urls.py  views.py
To_Do_List/config/: settings.py  urls.py
To_Do_List/templates/: base.html  cbv_base.html  form-js.html  pagination.html  todo_info.html  todo_list.html
To_Do_List/templates/registration/: login.html  signup.html  signup_done.html  verify_failed.html  verify_success.html
To_Do_List/templates/todo/: cbv_create_todo.html  cbv_todo_info.html  cbv_todo_list.html  cbv_update_todo.html  todo_form.html  todo_info.html  todo_list.html
To_Do_List/templates/todo_list/: todo_list.html
To_Do_List/utils/: email.py
(+38 files in other folders)
