[tool.poetry]
name = "goodeat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysqlclient = "^2.2.8"
django = "^6.0.3"
djangorestframework = "^3.17.1"
pillow = "^12.1.1"
django-cleanup = "^9.0.0"
django-extensions = "^4.1"
ipython = "^9.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
