[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
django-extensions = "^4.1"
ipython = "^9.11.0"
django-summernote = "^0.8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
